@@ -25,11 +25,13 @@
   * Make interface of this, similar to align-interface.
   
 */
-class Collision			// interface
+class Note_collision_interface
 {
 public:
-  static SCM automatic_shift (Grob*);
+  static SCM automatic_shift (Grob*, Drul_array< Link_array <Grob>  >);
   static SCM forced_shift (Grob*);
+  
+  static Drul_array< Link_array <Grob>  > get_clash_groups (Grob *me);
   DECLARE_SCHEME_CALLBACK (force_shift_callback, (SCM element, SCM axis));
   static void do_shifts (Grob*);
   static void add_column (Grob*me,Grob*ncol_l);
